--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   </head>
   <body>
     <div class="carousel">
-      <a class="carousel-item" href="#one!"><img src="https://lorempixel.com/250/250/nature/1"></a>
-      <a class="carousel-item" href="#two!"><img src="https://lorempixel.com/250/250/nature/2"></a>
-      <a class="carousel-item" href="#three!"><img src="https://lorempixel.com/250/250/nature/3"></a>
-      <a class="carousel-item" href="#four!"><img src="https://lorempixel.com/250/250/nature/4"></a>
-      <a class="carousel-item" href="#five!"><img src="https://lorempixel.com/250/250/nature/5"></a>
+      <a class="carousel-item" href="#one!"><img src="https://images5.alphacoders.com/491/thumb-1920-491120.png"></a>
+      <a class="carousel-item" href="#two!"><img src="https://i.pinimg.com/originals/8a/65/13/8a65134504e7ec2bc9f400e4830d67e8.jpg"></a>
+      <a class="carousel-item" href="#three!"><img src="http://simplywallpaper.net/pictures/2010/11/28/Light-Cycle-3-Tron-Legacy-Wallpaper.jpg"></a>
     </div>
   </body>
 </html>
