--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
               </div>
             </div>
 
-            <div class="item" style="width: 100%; height: 100%; display : flex; align-items : center;">
-              <a href="https://www.facebook.com/groups/doomsdaytest/" style="text-align: center; font-size: xx-large; width: 100%;"> Tham gia nhóm trên fb!!! </a>
+            <div class="item">
+              <div  style="width: 100%; height: 100%; display : flex; align-items : center;">
+                
+                <a href="https://www.facebook.com/groups/doomsdaytest/" style="text-align: center; font-size: xx-large; width: 100%;"> Tham gia nhóm trên fb!!! </a>
+              </div>
             </div> 
         
           </div>
